[package]
name = "mem_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
named_constants = "*"
phf = { version = "0.11", features = ["macros"] }
[features]
apex = []
